# hcobs

./: .travis.yml  LICENSE  README.md  default.nix  deploy.sh  hcobs.cabal  stack.yaml
.github/workflows/: ci.yml
bench/: MainBench.hs
src/Data/: Stuffed.hs
src/Data/Stuffed/: Internal.hs
test/: Allocation.hs  Spec.hs
