name:                hcobs
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/berdario/hcobs#readme
license:             BSD3
license-file:        LICENSE
author:              Dario
maintainer:          berdario@gmail.com
copyright:           2017 Dario Bertini
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Stuffed
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , reflection
                     , ghc-prim
  default-language:    Haskell2010

test-suite hcobs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hcobs
                     , hedgehog
                     , bytestring
                     , reflection
                     , mtl
                     , mmorph
                     , ghc-prim
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hcobs
